Fix horizontal alignment

--- a/packages/theme/src/theme/_buttons.scss
+++ b/packages/theme/src/theme/_buttons.scss
@@ -18,6 +18,8 @@
 	& > span {
 		display: inline-flex;
 		align-items: center;
+		justify-content: center;
+
 		> * {
 			flex-shrink: 0;
 		}
